--- a/pages/docs/features/skin-url.mdx
+++ b/pages/docs/features/skin-url.mdx
@@ -1,12 +1,9 @@
 # Skin Url
 
-Step1 [Confirm](#step-1-confirm-a-valid-skin)
+import {Steps} from "nextra-theme-docs";
 
-Step2 [Upload](#step-2-uploading-to-imgur)
-
-step3 [Get URL](#step-3-getting-the-url)
-
-## Step 1: Confirm a valid skin
+<Steps>
+### Confirm a valid skin
 
 Make sure the URL your point to contains only the valid skin. A valid skin url should look like
 this: [https://i.imgur.com/QuoWt6B.png](https://i.imgur.com/QuoWt6B.png)
@@ -15,23 +12,23 @@ You can see the image below as reference:
 
 ![](https://i.imgur.com/QiVtx7U.png)
 
-## Step 2: uploading to imgur
+### Uploading to imgur
 
 This time we are going to upload your custom skin format to imgur. Follow the following steps:
 
-**1. download the file**
+**1. Download the file**
 
 ![](https://i.imgur.com/YMMnFLD.png)
 
-**2. go to [https://imgur.com/upload?beta](https://imgur.com/upload?beta)**
+**2. Go to [https://imgur.com/upload](https://imgur.com/upload)**
 
-and upload the file to **imgur** (see image below)
+Upload the file to **imgur** (see image below)
 
 ![](https://i.imgur.com/LvVYQxY.png)
 
-## Step 3: Getting the url
+### Getting the url
 
-The Skin url MUST END WITH .PNG So make sure that you have the right url!
+The Skin Url MUST END WITH .PNG, so make sure that you have the right url!
 
 Below you can see the skin I just uploaded to imgur, now right-click on the image and hit "Copy image url"
 
@@ -40,3 +37,4 @@ It should copy an url like `https://i.imgur.com/abcdefgh.png`
 ![](https://i.imgur.com/Pzq6dba.png)
 
 That's it! you can now set the skin by using your IMGUR url!
+</Steps>
