--- a/pages/docs/misc/cannot-fetch-new-skins.mdx
+++ b/pages/docs/misc/cannot-fetch-new-skins.mdx
@@ -6,12 +6,12 @@ If, by running `/sr status` you get the following red message:
 
 Then this means your server cannot connect to the APIs the plugin requires to work.
 
---- 
+---
 
 ## How to fix it?
 
 This is a good question, and you are the right place to get an answer.
-Our plugin needs the following APIs over the following ports to be functional
+Our plugin needs the following APIs over the following ports to be functional:
 
 | URL                       | Port     |
 |---------------------------|----------|
