--- a/pages/docs/misc/incompatibility-list.mdx
+++ b/pages/docs/misc/incompatibility-list.mdx
@@ -2,14 +2,14 @@
 
 ## Incompatible clients
 
-Launchers that have built-in skin mods or other game altering mods that block SkinsRestorer.
+Launchers that have built-in skin mods or other game-altering mods that block SkinsRestorer.
 
 * TLauncher
 
 ## General plugin types causing issues
 
 * Mostly all other skin plugins like myskin
-* Skript - they can hook into skins
+* Skript (They can hook into skins)
 * Custom world plugins
 * Some TabList plugins
 
