--- a/pages/docs/setup/locale-translations.mdx
+++ b/pages/docs/setup/locale-translations.mdx
@@ -15,7 +15,8 @@ import { Callout } from 'nextra-theme-docs'
 
 ### How to Contribute
 
-We have our own Crowdin page: [[link]](https://crowdin.com/project/SkinsRestorer) were you can contribute.
+We have our own Crowdin page at [[translate.skinsrestorer.net](https://translate.skinsrestorer.net)]
+where you can contribute.
 
 If a language is missing, you can contact support on our discord.
 
@@ -27,40 +28,40 @@ You can download updated translations from our Dev branch here: [[link]](https:/
 
 ## Language codes
 
-Language (translated) | Language | config value | file name
---- | --- | --- | ---
-Deutsch | German| de | [language_de.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_de.properties)
-Français | French | fr | [language_fr.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_fr.properties)
-简体中文（中国大陆）| Chinese Simplified | zh_hk | [language_zh_hk.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_zh_hk.properties)
-繁體中文（台灣）| Chinese Traditional | zh_tw | [language_zh_tw.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_zh_tw.properties)
-Polski (Polska) | Polish | pl | [language_pl.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_pl.properties)
-Norsk Bokmål (Norge) | Norwegian Bokmål | no | [language_no.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_no.properties)
-Español  | Spanish | es | [language_es.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_es.properties)
-日本語 (Nihongo) | Japanese | ja | [language_ja.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ja.properties)
-Suomi (Suomi) | Finnish | fi | [language_fi.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_fi.properties)
-Italiano (Italia) | Italian | it | [language_it.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_it.properties)
-Čeština (Česká Republika) | Czech | cs | [language_cs.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_cs.properties)
-Українська (Ukrayins'ka) | Ukrainian | uk | [language_uk.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_uk.properties)
-Magyar (Magyarország) | Hungarian | hu | [language_hu.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_hu.properties)
-Română (România) | Romanian | ro | [language_ro.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ro.properties)
-Türkçe (Türkiye) | Turkish | tr | [language_tr.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_tr.properties)
-ไทย (thay) | Thai | th | [language_th.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_th.properties)
-한국어 (Hangugeo) | Korean | ko | [language_ko.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ko.properties)
-Български (България) | Bulgarian | bg | [language_bg.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_bg.properties)
-Català (Catalunya) | Catalan | ca | [language_ca.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ca.properties)
-Dansk (Danmark) | Danish | da |  [language_da.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_da.properties)
-Lietuvių | Lithuanian | lt | [language_it.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_lt.properties)
-Nederlands | Dutch | nl | [language_nl.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_nl.properties)
-اللغة العربية (alLuġah al'Arabiyye) | Arabic | ar | [language_ar.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ar.properties)
+| Language (translated)               | Language            | config value | file name                                                                                                                                           |
+|-------------------------------------|---------------------|--------------|-----------------------------------------------------------------------------------------------------------------------------------------------------|
+| Deutsch                             | German              | de           | [language_de.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_de.properties)       |
+| Français                            | French              | fr           | [language_fr.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_fr.properties)       |
+| 简体中文（中国大陆）                          | Chinese Simplified  | zh_hk        | [language_zh_hk.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_zh_hk.properties) |
+| 繁體中文（台灣）                            | Chinese Traditional | zh_tw        | [language_zh_tw.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_zh_tw.properties) |
+| Polski (Polska)                     | Polish              | pl           | [language_pl.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_pl.properties)       |
+| Norsk Bokmål (Norge)                | Norwegian Bokmål    | no           | [language_no.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_no.properties)       |
+| Español                             | Spanish             | es           | [language_es.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_es.properties)       |
+| 日本語 (Nihongo)                       | Japanese            | ja           | [language_ja.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ja.properties)       |
+| Suomi (Suomi)                       | Finnish             | fi           | [language_fi.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_fi.properties)       |
+| Italiano (Italia)                   | Italian             | it           | [language_it.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_it.properties)       |
+| Čeština (Česká Republika)           | Czech               | cs           | [language_cs.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_cs.properties)       |
+| Українська (Ukrayins'ka)            | Ukrainian           | uk           | [language_uk.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_uk.properties)       |
+| Magyar (Magyarország)               | Hungarian           | hu           | [language_hu.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_hu.properties)       |
+| Română (România)                    | Romanian            | ro           | [language_ro.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ro.properties)       |
+| Türkçe (Türkiye)                    | Turkish             | tr           | [language_tr.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_tr.properties)       |
+| ไทย (thay)                          | Thai                | th           | [language_th.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_th.properties)       |
+| 한국어 (Hangugeo)                      | Korean              | ko           | [language_ko.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ko.properties)       |
+| Български (България)                | Bulgarian           | bg           | [language_bg.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_bg.properties)       |
+| Català (Catalunya)                  | Catalan             | ca           | [language_ca.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ca.properties)       |
+| Dansk (Danmark)                     | Danish              | da           | [language_da.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_da.properties)       |
+| Lietuvių                            | Lithuanian          | lt           | [language_it.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_lt.properties)       |
+| Nederlands                          | Dutch               | nl           | [language_nl.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_nl.properties)       |
+| اللغة العربية (alLuġah al'Arabiyye) | Arabic              | ar           | [language_ar.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ar.properties)       |
 
 ### Specifications
-Language (translated) | Language | config value | file name
---- | --- | --- | ---
-繁體中文（香港特別行政區）| Chinese Traditional (Hong Kong) | zh_hk | [language_zh_hk.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_zh_hk.properties)
-Français (Québec) | Canadian French | fr_ca | [language_fr_ca.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_fr_ca.properties)
-Português (Brasil) | Brazilian Portuguese | pt_br | [language_pt_br.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_pt_br.properties)
-Español (Argentina) | Argentinian Spanish | es_ar | [language_es_ar.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_es_ar.properties)
-Norsk nynorsk (Norge) | Norwegian Nynorsk | nn_no | [language_nn_no.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_nn_no.properties)
+| Language (translated) | Language                        | config value | file name                                                                                                                                           |
+|-----------------------|---------------------------------|--------------|-----------------------------------------------------------------------------------------------------------------------------------------------------|
+| 繁體中文（香港特別行政區）         | Chinese Traditional (Hong Kong) | zh_hk        | [language_zh_hk.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_zh_hk.properties) |
+| Français (Québec)     | Canadian French                 | fr_ca        | [language_fr_ca.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_fr_ca.properties) |
+| Português (Brasil)    | Brazilian Portuguese            | pt_br        | [language_pt_br.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_pt_br.properties) |
+| Español (Argentina)   | Argentinian Spanish             | es_ar        | [language_es_ar.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_es_ar.properties) |
+| Norsk nynorsk (Norge) | Norwegian Nynorsk               | nn_no        | [language_nn_no.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_nn_no.properties) |
 
 ## Change fallback language
 
@@ -82,7 +83,7 @@ In this section we will explain how you can change the help messages.
 
 `plugins/SkinsRestorer/languages/language_<code>.properties` Line 14 till 27 are the `{description}` of the `acf-core.help_format`
 
-```.properties
+```properties
 skinsrestorer.help_skin_set=Changes your skin.
 skinsrestorer.help_skin_set_other=Sets the skin for a target player.
 skinsrestorer.help_skin_set_other_url=Sets the skin from an url for a target player.
@@ -104,7 +105,8 @@ command.properties:
 
 ![](https://i.imgur.com/DUnadqC.png)
 
-This is how the format looks like. as you can see, `acf-core.help_header` & `acf-core.help_format` are used with
+This is what the format looks like.
+As you can see, `acf-core.help_header` & `acf-core.help_format` are used with
 the `/skin`
 
 ![](https://i.imgur.com/hqUxnY6.png)
@@ -115,7 +117,7 @@ When performing a wrong command, this is how it will tell you:
 2. search command matching: `acf-core.help_search_header`
 3. matching commands in `acf-core.help_format` format
 
-```.properties
+```properties
 acf-core.no_command_matched_search=&e[&2SkinsRestorer&e] &4Error&8: &cno such command&4: <c2>{search}</c2>.
 acf-core.help_page_information=- Showing page <c2>{page}</c2> of <c2>{totalpages}</c2> (<c3>{results}</c3> results).
 acf-core.help_no_results=&e[&2SkinsRestorer&e] &4Error&8: &cNo more results&4.
@@ -146,24 +148,26 @@ acf-core.permission_denied=&3[&2&lSkinsRestorer&r&3] &cI'm sorry, but you do not
 SkinsRestorer has different Success messages when using different commands
 
 User:
-Command and aliases | Description | Locale
-----------------|--------------|-------
-`/skin <skin>` | Your skin has been changed. | `SKIN_CHANGE_SUCCESS`
-`/skin set <player>` | You set %player's skin. | `ADMIN_SET_SKIN`
-`/skin clear` | Your skin has been cleared. | `SKIN_CLEAR_SUCCESS`
-`/skin update` | Your skin has been updated. | `SUCCESS_UPDATING_SKIN`
+
+| Command and aliases  | Description                 | Locale                  |
+|----------------------|-----------------------------|-------------------------|
+| `/skin <skin>`       | Your skin has been changed. | `SKIN_CHANGE_SUCCESS`   |
+| `/skin set <player>` | You set %player's skin.     | `ADMIN_SET_SKIN`        |
+| `/skin clear`        | Your skin has been cleared. | `SKIN_CLEAR_SUCCESS`    |
+| `/skin update`       | Your skin has been updated. | `SUCCESS_UPDATING_SKIN` |
 
 Admin:
-Command and aliases | Description | Locale
-----------------|--------------|-------
-`/skin clear <player>` | Skin cleared for player %player. | `SKIN_CLEAR_ISSUER`
-`/skin update <player>` | Skin updated for player %player. | `SUCCESS_UPDATING_SKIN_OTHER`
-`/sr drop <player>` | %data data dropped for %target | `SKIN_DATA_DROPPED`
-`/sr set <player> <skin>` | you set %player skin | `ADMIN_SET_SKIN`
+
+| Command and aliases       | Description                      | Locale                        |
+|---------------------------|----------------------------------|-------------------------------|
+| `/skin clear <player>`    | Skin cleared for player %player. | `SKIN_CLEAR_ISSUER`           |
+| `/skin update <player>`   | Skin updated for player %player. | `SUCCESS_UPDATING_SKIN_OTHER` |
+| `/sr drop <player>`       | %data data dropped for %target   | `SKIN_DATA_DROPPED`           |
+| `/sr set <player> <skin>` | you set %player skin             | `ADMIN_SET_SKIN`              |
 
 ## other useful messages
 
-```yml
+```properties
 skinsrestorer.not_premium={prefix} &4Error&8: &cPremium player with that name does not exist.
 skinsrestorer.error_no_skin={prefix} &4Error&8: &cThis player has no skin set.
 skinsrestorer.skin_cooldown={prefix} &4Error&8: &cYou can change your skin again in &e{0} &cseconds.
